# bucket-common-types

./: Cargo.toml  Makefile.toml  THIRD-PARTY-LICENSE.html  about.toml  rust-toolchain.toml
src/: bucket_path.rs  bucket_search_query.rs  compression.rs  encryption.rs  exclusive_share_link.rs  lib.rs  payment.rs  region.rs  secret_share_link.rs  share_link.rs  storage_engine.rs  unix_timestamp.rs  user_settings.rs  util.rs  webhook.rs
src/account/: authentication.rs  mod.rs  payment.rs  verification.rs
src/bucket/: bucket_feature_flags.rs  bucket_features.rs  bucket_guid.rs  bucket_limits.rs  bucket_path.rs  bucket_permission.rs  bucket_retention_policy.rs  bucket_visibility.rs  common_prefix.rs  conditional_requests.rs  encryption.rs  encryption_algorithm.rs  encryption_scheme.rs  mod.rs  storage_operation_behavior_flags.rs
src/bucket/archive/: mod.rs
src/key/: derived_key.rs  kdf.rs  master_key.rs  master_key_builder.rs  mod.rs  nonce_generator.rs  shard_master_key_generator.rs
src/key/memory/: mod.rs  secure_generic_array.rs
src/key/memory/alllocator/: mod.rs
src/metric/: mod.rs
src/middleware/: grpc_ext.rs  http_ext.rs  mod.rs
src/middleware/types/: mod.rs
src/search/: mod.rs
src/search/encoding/: url.rs
src/search/lexer/: mod.rs  rules.rs  suggestion.rs  token.rs
src/search/query/: builder.rs  model.rs
src/share/: exclusive_share_link.rs  fully_qualified_domain_name.rs  mod.rs  secrete_share_link_token.rs  secrete_share_link_url_encoded.rs  share_link_token.rs  share_link_url_encoded.rs  token_path.rs  versioning.rs
src/share/centralized/: centralized_secrete_share_link.rs  centralized_secrete_share_link_token.rs  centralized_secrete_share_link_token_url_encoded.rs  centralized_share_link.rs  centralized_share_link_token.rs  centralized_share_link_url_encoded.rs  mod.rs
src/share/decentralized/: decentralized_secrete_share_link_url_encoded.rs  decentralized_secrete_share_token.rs  decentralized_share_link.rs  decentralized_share_link_url_encoded.rs  decentralized_share_token.rs  decentralized_share_token_signature.rs  decentralized_share_tokens_union.rs  decentralzed_share_token_signature.rs  mod.rs
src/share/decentralized/signature/: decentralzed_share_token_signature.rs  mod.rs  timeframe_signature_scheme.rs
src/token/: access_token.rs  bearer_token.rs  idempotency_token.rs  jwt_token.rs  mod.rs
src/validation/: mod.rs
src/webhook/: mod.rs  version.rs
