[package]
name = "bucket-common-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["web"]
wasm=[]
share_link=[]
secret_share_link=["share_link"]
web=["share_link", "secret_share_link", "wasm","bucket_search_query", "unix_timestamp"]
bucket_search_query=[]
unix_timestamp = []
[dependencies]
aes-gcm = "0.10.2"
base64 = "0.21.3"
bincode = "1.3.3"
bitflags = {version = "2.4.0", features = ["serde"]}
digest = "0.10.7"
ed25519-compact = "2.0.4"
hex-literal = "0.4.1"
serde = { version = "1.0.186", features = ["derive"] }
sha3 = "0.10.8"
strum = { version = "0.25.0", features = ["derive"] }
#strum_macros = "0.25.2"
thiserror = "1.0.47"
time = { version = "0.3.20", features = ["parsing", "serde"] }
url = "2.4.1"
uuid = { version = "1.4.1" , features = ["serde", "v4"]}
rand = "0.8.5"
serde_with = "3.4.0"
convert_case = "0.6.0"
prost-types = "0.12.3"


[dev-dependencies]
serial_test = "3.0.0"
criterion = { version = "0.5.1" } # Benchmark framework that is used to deterimne performance change, as in regresion or improvement.
pretty_assertions = "1.4.0"
